[feat]Add TypeScript config

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My PortfolioSite on firebase. https://seiga.ga",
   "main": "index.js",
   "dependencies": {
+    "@zeit/next-typescript": "^1.1.1",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
