--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,23 @@
 {
+  "plugins": [
+    [
+      "module-resolver", {
+        "root": ["."],
+        "alias": {
+          "styles": "./styles"
+        },
+        "cwd": "babelrc"
+    }],
+    [
+      "wrap-in-js",
+      {
+        "extensions": ["css$", "scss$"]
+      }
+    ]
+  ],
   "presets": [
     "next/babel",
     "@zeit/next-typescript/babel"
-  ]
+  ],
+  "ignore": []
 }
