--- a/package.json
+++ b/package.json
@@ -4,10 +4,23 @@
   "description": "My PortfolioSite on firebase. https://seiga.ga",
   "main": "index.js",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-brands": "^5.0.10",
+    "@fortawesome/fontawesome-free-regular": "^5.0.10",
+    "@fortawesome/react-fontawesome": "0.0.18",
     "@zeit/next-typescript": "^1.1.1",
+    "autoprefixer": "^9.1.5",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-wrap-in-js": "^1.1.1",
+    "glob": "^7.1.3",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-loader": "^3.0.0",
+    "raw-loader": "^0.5.1",
+    "node-sass": "^4.9.3",
     "next": "^8.1.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {},
   "scripts": {
