--- a/package.json
+++ b/package.json
@@ -2,27 +2,51 @@
   "name": "seiga.ga",
   "version": "1.0.0",
   "description": "My PortfolioSite on firebase. https://seiga.ga",
-  "main": "index.js",
+  "engines": {
+    "node": "8"
+  },
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
     "autoprefixer": "^9.1.5",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-wrap-in-js": "^1.1.1",
+    "firebase-admin": "^8.2.0",
+    "firebase-functions": "^3.0.2",
     "glob": "^7.1.3",
+    "next": "^8.1.0",
+    "node-sass": "^4.9.3",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
-    "node-sass": "^4.9.3",
-    "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "sass-loader": "^7.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/next": "^8.0.5",
+    "@types/react": "^16.8.23",
+    "cpx": "^1.5.0",
+    "cross-env": "^5.2.0",
+    "firebase-tools": "^7.0.2",
+    "rimraf": "^2.6.3",
+    "tslint": "^5.18.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.2"
+  },
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "dev": "next src/app",
+    "preserve": "npm run build-public && npm run build-functions && npm run build-app && npm run copy-deps && npm run install-deps",
+    "serve": "cross-env NODE_ENV=production firebase serve",
+    "deploy": "firebase deploy",
+    "clean": "rimraf \"dist/functions\" && rimraf \"dist/public\"",
+    "build-app": "next build \"src/app\"",
+    "build-public": "cpx \"src/app/static/**/*.*\" \"dist/public/static\" -C",
+    "build-functions": "tsc --project src/functions",
+    "lint-app": "tslint --project src/app",
+    "typecheck-app": "tsc --project src/app",
+    "lint-functions": "tslint --project src/functions",
+    "copy-deps": "cpx \"*{package.json,package-lock.json,yarn.lock}\" \"dist/functions\" -C",
+    "install-deps": "cd \"dist/functions\" && npm i"
   },
   "repository": {
     "type": "git",
